TestNoteDao: split testGetAllByParams2()